--- a/Lab2/main.css
+++ b/Lab2/main.css
@@ -47,27 +47,6 @@ section {
     margin-right: auto;
 }
 
-#pierwszy {
-    width: 75%;
-    background-color: cornsilk;
-}
-
-#drugi {
-    width: 75%;
-    background-color: darkkhaki;
-}
-
-#superLot {
-    background-color: chartreuse;
-
-    width: 200px;
-    top: 125px;
-}
-
-#drugiLot>td{
-    padding-top: 40px;
-}
-
 #loty{
     position: relative;
 }
@@ -98,4 +77,40 @@ img{
 
 .tytulListy {
     font-size: large;
+}
+
+menu {
+    list-style: none;
+    font: menu;
+    text-align: left;
+    padding-left: 0px;
+    background-color: palegreen;
+}
+
+menu a {
+    text-decoration: none;
+    color: black;
+    text-transform: uppercase;
+}
+
+#podstrony {
+    list-style: none;
+    padding-left: 20px;
+}
+
+.lekko {
+    background-color: yellow;
+}
+
+.bardzo {
+    background-color: orange;
+}
+
+.odwolany {
+    background-color: red;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
 }
