--- a/Lab2/main.css
+++ b/Lab2/main.css
@@ -2,7 +2,9 @@ body {
     text-align: center;
 }
 
+
 table, th, td {
+    border: 1px solid black;
     text-align: left;
 
     margin-left: auto;
@@ -16,12 +18,10 @@ table, th, td {
     font-weight: 100;
     
     border-collapse: collapse;
-    margin-bottom: 30px;
-    
+    margin-bottom: 30px; 
 } 
 
 footer {
-
     margin-left: auto;
     margin-right: auto;
 
@@ -34,7 +34,6 @@ footer {
     font-size: 30px;
   
     width: 50%;
-  
 }
 
 p {
@@ -78,7 +77,7 @@ img{
     font-size: large;
 }
 
-nav {
+menu {
     list-style: none;
     font: menu;
     text-align: left;
@@ -87,7 +86,7 @@ nav {
     width: 220px;
 }
 
-nav a {
+menu a {
     text-decoration: none;
     color: black;
     text-transform: uppercase;
@@ -111,21 +110,27 @@ nav a {
     background-color: red;
 }
 
-.flex-container {
-    display: flex;
+.grid-container {
+    display: grid;
+    grid-template-columns: 240px 3fr 2fr;
     justify-content: space-between;
     max-width: 1900px;
+    column-gap: 15px;
 }
 
-.flex-container > * {
-    padding: 10px;
-    flex: 1 100%;
+.grid-container>h1 {
+    grid-column-start: 1;
+    grid-column-end: -1;
 }
 
-@media screen and (max-width: 800px) {
-    .flex-container {
-        display: flex;
-        flex-flow: row wrap;
+.grid-container>footer {
+    grid-column-start: 1;
+    grid-column-end: -1;
+}
+
+@media screen and (max-width: 500px) {
+    .grid-container {
+        grid-template-columns: auto;
     }
     img {
         display: none;
@@ -136,7 +141,21 @@ nav a {
     #lista {
         width: 200px;
     }
-    nav {
+    menu {
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media screen and (min-width: 500px) and (max-width: 1000px) {
+    .grid-container {
+        grid-template-columns: 3fr 2fr;
+    }
+    #lewy {
+        grid-column-start: 1;
+        grid-column-end: -1;
+    }
+    menu {
         margin-left: auto;
         margin-right: auto;
     }
@@ -173,4 +192,15 @@ nav a {
 
 #pasazerowie>li:nth-child(odd) {
     background-color: aquamarine;
+}
+
+#okienko {
+    position: fixed;
+    background-color: aqua;
+    top: 0px;
+    left: 0px;
+    opacity: 0.7;
+    width: 100%;
+    height: 100%;
+    font-size: 50px;
 }
