--- a/Lab2/main.css
+++ b/Lab2/main.css
@@ -19,6 +19,8 @@ table, th, td {
     
     border-collapse: collapse;
     margin-bottom: 30px; 
+
+    overflow: hidden;
 } 
 
 footer {
@@ -83,7 +85,7 @@ menu {
     text-align: left;
     padding-left: 0px;
     background-color: palegreen;
-    width: 220px;
+    width: 205px;
 }
 
 menu a {
@@ -112,7 +114,7 @@ menu a {
 
 .grid-container {
     display: grid;
-    grid-template-columns: 240px 3fr 2fr;
+    grid-template-columns: 205px 3fr 1fr;
     justify-content: space-between;
     max-width: 1900px;
     column-gap: 15px;
@@ -147,9 +149,9 @@ menu a {
     }
 }
 
-@media screen and (min-width: 500px) and (max-width: 1000px) {
+@media screen and (min-width: 501px) and (max-width: 1200px) {
     .grid-container {
-        grid-template-columns: 3fr 2fr;
+        grid-template-columns: 3fr 1fr;
     }
     #lewy {
         grid-column-start: 1;
@@ -158,6 +160,34 @@ menu a {
     menu {
         margin-left: auto;
         margin-right: auto;
+    }
+    #rezerwacja {
+        grid-column-start: -2;
+        grid-row-start: 4;
+        grid-row-end: 5;
+        align-self: end;
+    }
+    
+    #srodek {
+        grid-row-start: 3;
+        grid-row-end: 5;
+        grid-column-start: 1;
+    }
+
+}
+
+@media screen and (min-width: 1201px) {
+    #rezerwacja {
+        grid-column-start: -2;
+        grid-row-start: 3;
+        grid-row-end: 4;
+        align-self: end;
+    }
+    
+    #srodek {
+        grid-row-start: 2;
+        grid-row-end: 4;
+        grid-column-start: 2;
     }
 }
 
@@ -196,11 +226,24 @@ menu a {
 
 #okienko {
     position: fixed;
-    background-color: aqua;
+    background: rgba(0, 182, 214, 0.8);
     top: 0px;
     left: 0px;
-    opacity: 0.7;
     width: 100%;
     height: 100%;
     font-size: 50px;
+}
+
+form {
+    text-align: left;
+}
+
+#tabelaOpoznien {
+    table-layout: fixed;
+    width: 245px;
+}
+
+#tabelaOpoznien td {
+    padding-left: 0px;
+    padding-right: 0px;
 }
