--- a/Lab2/main.css
+++ b/Lab2/main.css
@@ -231,6 +231,10 @@ menu a {
     left: 0px;
     width: 100%;
     height: 100%;
+    font-size: 30px;
+}
+
+#oknoTytul {
     font-size: 50px;
 }
 
