--- a/memy/views/index.pug
+++ b/memy/views/index.pug
@@ -13,3 +13,4 @@ html
                    a(href="meme/" + meme.id) #{meme.name}
                    p #{meme.price}
                    img(src=meme.url)
+        a(href=loginAction) #{loginText}
