--- a/memy/views/noMeme.pug
+++ b/memy/views/noMeme.pug
@@ -4,8 +4,7 @@ html
     style
         include ../public/stylesheets/styleMeme.css
     body
-        h1="Błąd"
-        p Podano zły login lub hasło
+        h1="Nie ma takiego mema"
+        p W naszej bazie nie ma mema o id #{id}
         a(href="/") Powrót
-
             
