--- a/memy/views/wrongParam.pug
+++ b/memy/views/wrongParam.pug
@@ -4,8 +4,5 @@ html
     style
         include ../public/stylesheets/styleMeme.css
     body
-        h1="Błąd"
-        p Podano zły login lub hasło
+        h1="Błędny parametr"
         a(href="/") Powrót
-
-            
